--- a/src/base/navItem/index.scss
+++ b/src/base/navItem/index.scss
@@ -6,8 +6,19 @@
     justify-content: space-between;
     align-items: center;
     border-bottom: #e6e6e6 solid 1px;
+    .nav_row{
+        display: flex;
+        align-items: center;
+        text{
+            display: block;
+            margin-left: 20px;
+        }
+    }
     .nav-icon{
         width: 44px;
         height: 44px;
     }
+}
+.f-30{
+    font-size: 30px;
 }
