--- a/src/pages/addressEdit/index.scss
+++ b/src/pages/addressEdit/index.scss
@@ -12,6 +12,7 @@
     }
     input,textarea{
         flex-grow: 1;
+        
     }
     input{
         line-height: 88px;
@@ -27,4 +28,21 @@
     background: #fff;
     align-items: center;
     height: 98px;
+}
+
+.btn_setting{
+    padding: 50px;
+    width: 480px;
+    background: #fff;
+    border-radius: 10px;
+    button{
+        width: 100%;
+        height: 70px;
+        margin-top: 50px;
+        line-height: 70px;
+        font-size: 32px;
+        color: #fff;
+        background: linear-gradient(45deg, rgba(16, 230, 172, 1), rgba(28, 212, 212, 1));
+        border-radius: 85px;
+    }
 }
