--- a/src/pages/goodsDetail/index.scss
+++ b/src/pages/goodsDetail/index.scss
@@ -2,7 +2,12 @@
     width: 100%;
     height: 500px;
 }
-
+swiper{
+    height: 500px;
+}
+.rich_box {
+   padding-bottom: 100px;
+}
 .goods_info {
     width: 100%;
     box-sizing: border-box;
