--- a/src/pages/index/index.scss
+++ b/src/pages/index/index.scss
@@ -1,10 +1,39 @@
 .noticebar_wrap {
     border-radius: 100px;
     overflow: hidden;
+    display: flex;
+    align-items: center;
+    font-size: 22px;
+    background: #FFE796;
+    padding: 0 20px;
+    color: #FF541F;
+    height: 49px;
+    .at-icon {
+        flex-shrink: 0;
+        padding-right: 10px;
+        height: 100%;
+        background: #FFE796;
+    }
+    .notices {
+        flex-grow: 1;
+        overflow: hidden;
+        white-space: nowrap;
+        text {
+            white-space: nowrap;
+            display: block;
+            
+        }
+    }
     .at-noticebar {
         background: #FFE796;
         color: #FF541F;
     }
+}
+
+.banner {
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    overflow: hidden;
 }
 
 .swiper-img {
@@ -12,24 +41,83 @@
     height: 300px;
 }
 
+.site {
+    width: 710px;
+    background: #FFFFFF;
+    box-shadow: 0px 4px 8px 0px rgba(179, 195, 221, 0.3);
+    border-radius: 20px;
+    margin-top: 22px;
+    box-sizing: border-box;
+    padding: 30px 20px;
+    line-height: 1.7;
+    .color-1 {
+        color: #1d1d1d;
+        margin-bottom: 8px;
+    }
+    .sort {
+        width: 164px;
+        height: 62px;
+        border: 2px solid #25CFC7;
+        border-radius: 31px;
+        box-sizing: border-box;
+        padding: 0 6px;
+        text {
+            width: 79px;
+            height: 50px;
+            border-radius: 25px;
+            font-size: 24px;
+            color: #666666;
+            line-height: 50px;
+            display: block;
+            text-align: center;
+            &.on {
+                background: linear-gradient(120deg, #10E6AC, #3FB2E8);
+                color: #fff;
+            }
+        }
+    }
+}
+
 .sort_wrap {
     display: flex;
-    justify-content: space-between;
+    // justify-content: space-between;
+    height: calc(100vh - 232px);
+    box-sizing: border-box;
     .sort_title {
         width: 160px;
-        height: calc(100vh - 20px);
+        height: calc(100vh - 332px);
         background: #fff;
         border-radius: 10px;
+        .style_search {
+            width: 100%;
+            height: 80px;
+            line-height: 80px;
+            text-align: center;
+            position: relative;
+            z-index: 6;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            image {
+                width: 30px;
+                height: 30px;
+                margin-right: 4px;
+            }
+            text {
+                font-size: 28px;
+                color: #333;
+            }
+        }
         .item_title {
             width: 100%;
-            font-size: 24px;
+            font-size: 28px;
             color: #333;
             height: 80px;
             line-height: 80px;
             text-align: center;
             position: relative;
             z-index: 6;
-            image{
+            image {
                 position: absolute;
                 left: 0;
                 top: 0;
@@ -40,37 +128,162 @@
             }
             &.on {
                 color: #10E6AC;
-                image{
+                image {
                     opacity: 1;
                 }
             }
         }
     }
     .sort_content {
+        margin-left: 17px;
         width: 530px;
-        height: calc(100vh - 20px);
-        .item_con {
-            background: #fff;
-            padding: 30px 20px;
-            border-radius: 10px;
-            .item_goods_wrap:nth-last-of-type(1){
-                padding-bottom: 0;
+        height: calc(100vh - 332px);
+    }
+}
+
+.mar-t-6 {
+    margin-top: -1px;
+}
+
+.item_con {
+    background: #fff;
+    padding: 30px 20px;
+    border-radius: 10px;
+    .item_goods_wrap:nth-last-of-type(1) {
+        padding-bottom: 0;
+    }
+    .item_goods_wrap:nth-last-of-type(1):after {
+        border: none;
+    }
+    .goods_img {
+        width: 140px;
+        height: 140px;
+        background: rgba(245, 245, 245, 1);
+        border-radius: 8px;
+        flex-shrink: 0;
+        margin-right: 17px;
+    }
+    .item_goods {
+        flex-grow: 1;
+        height: 140px;
+        width: 325px;
+        text {
+            display: block;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+            overflow: hidden;
+        }
+    }
+}
+
+.shop_state {
+    width: 579px;
+    height: 796px;
+    position: relative;
+    color: #fff;
+    .shop_state_wrap {
+        width: 380px;
+        margin: 0 auto;
+        padding-top: 240px;
+        text {
+            line-height: 1.7;
+        }
+        .title {
+            font-size: 44px;
+            font-weight: 600;
+            text-align: center;
+            margin-bottom: 2px;
+        }
+    }
+    .gg {
+        color: #FF6E02;
+        font-size: 36px;
+        text-align: center;
+        margin-top: 35px;
+    }
+    text {
+        display: block;
+    }
+}
+
+.coupon_list {
+    width: 630px;
+    position: relative;
+    overflow: hidden;
+    padding-bottom: 30px;
+    border-bottom-left-radius: 25px;
+    border-bottom-right-radius: 25px;
+    image {
+        width: 100%;
+        height: 100%;
+    }
+    .text_hb {
+        font-size: 40px;
+        font-weight: bold;
+        color: #F9E3B5;
+        line-height: 60px;
+        text-align: center;
+        text-shadow: 0px 2px 5px rgba(247, 13, 12, 0.75);
+        padding-top: 118px;
+    }
+    .text_hb_s {
+        font-size: 28px;
+        font-weight: bold;
+        color: #F9E3B5;
+        line-height: 60px;
+        text-align: center;
+        text-shadow: 0px 2px 5px rgba(247, 13, 12, 0.75);
+        margin-bottom: 40px;
+    }
+    .list_wrap {
+        height: 520px;
+        overflow-y: auto;
+    }
+    .item {
+        position: relative;
+        width: 570px;
+        height: 155px;
+        margin: 0 auto;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-bottom: 20px;
+        .div_l {
+            width: 150px;
+            flex-shrink: 0;
+            color: #15DFBB;
+            font-size: 70px;
+            text-align: center;
+            border-right: #F0F0F0 solid 1px;
+            height: 100px;
+            text {
+                font-size: 28px;
             }
-            .item_goods_wrap:nth-last-of-type(1):after{
-               border: none;
+        }
+        .div_r {
+            flex-grow: 1;
+            box-sizing: border-box;
+            padding: 18px 20px;
+            height: 100px;
+            position: relative;
+            text {
+                display: block;
+                width: 60%;
             }
-            .goods_img {
-                width: 140px;
-                height: 140px;
-                background: rgba(245, 245, 245, 1);
-                border-radius: 8px;
-            }
-            .item_goods {
-                width: 335px;
-                height: 140px;
-                text {
-                    display: block;
-                }
+            .btn_use {
+                width: 126px;
+                height: 50px;
+                background: linear-gradient(45deg, #10E6AC, #1CD4D4);
+                border-radius: 25px;
+                font-size: 28px;
+                font-family: PingFang SC;
+                font-weight: 500;
+                color: #FFFFFF;
+                line-height: 50px;
+                text-align: center;
+                position: absolute;
+                top: 25px;
+                right: 20px;
             }
         }
     }
