--- a/src/pages/mine/index.scss
+++ b/src/pages/mine/index.scss
@@ -55,9 +55,20 @@
 
 .nav_wrap {
     width: 710px;
-    height: 528px;
+    height: 440px;
     background: rgba(255, 255, 255, 1);
     box-shadow: 0px 0px 10px 0px rgba(179, 221, 195, 0.35);
     border-radius: 10px;
     margin: 20px;
+    overflow: hidden;
+    .nav_item:nth-last-of-type(1){
+        border: none;
+    }
+    button {
+        width: 600px;
+        height: 100%;
+        color: #333;
+        font-size: 30px;
+        background: #fff;
+    }
 }
