--- a/src/pages/shoppingCar/index.scss
+++ b/src/pages/shoppingCar/index.scss
@@ -44,7 +44,7 @@
     .input_number{
         position: absolute;
         right: 0;
-        bottom: 20px;
+        bottom: 7px;
         z-index: 8;
     }
     
@@ -61,7 +61,7 @@
     z-index: 99;
     box-sizing: border-box;
     padding: 20px;
-    max-height: calc(100vh - 240px);
+    height: calc(100vh - 320px);
     overflow: hidden;
 }
 
@@ -90,6 +90,9 @@
         border-radius: 35px;
         line-height: 70px;
         margin-left: 30px;
+        &.disabled{
+            background: #ccc;
+        }
     }
     button.del {
         width:98px;
