--- a/src/pages/submitOrder/index.scss
+++ b/src/pages/submitOrder/index.scss
@@ -7,8 +7,22 @@
     box-sizing: border-box;
     padding: 0 20px;
 }
-
+.yf-tip {
+    padding: 20px 0 10px 0;
+    text{
+        color: #FAB62C;
+    }
+    .icon-tip {
+        margin-right: 10px;
+    }
+}
 .submit_order {
+    .btn-style{
+        background: none;
+        position: relative;
+        z-index: 99;
+
+    }
     .addr {
         height: 158px;
         image {
@@ -54,11 +68,18 @@
     padding: 20px;
     height: 200px;
     align-items: flex-start;
+    margin-bottom: 100px;
+    text{
+        flex-shrink: 0;
+    }
     textarea {
         flex-grow: 1;
         margin-left: 20px;
         font-size: 26px;
         color: #333;
+        position: relative;
+        z-index: 22;
+        padding-top: 4px;
     }
 }
 
@@ -95,7 +116,7 @@
     .options {
         flex-grow: 1;
         background: #fff;
-        height: 100%;
+        height: 520px;
         overflow-y: auto;
         .options_item {
             display: flex;
@@ -104,6 +125,15 @@
             height: 80px;
             padding: 0 30px;
             border-bottom: #E6E6E6 solid 1px;
+            &>text.on_item{
+                background: linear-gradient(45deg, rgba(16, 230, 172, 1) 0%, rgba(28, 212, 212, 1) 100%);
+                -webkit-background-clip: text;
+                -webkit-text-fill-color: transparent
+            }
+            &>text.color_red{
+                color: red;
+                font-size: 24px;
+            }
             &.on {
                 image {
                     display: block;
@@ -126,3 +156,28 @@
         }
     }
 }
+
+.integral_wrap{
+    padding: 30px;
+    height: 100%;
+    background: #fff;
+    padding-bottom: 180px;
+    .flex{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    .pad_tb_20{
+        padding: 20px 0;
+    }
+    .mar-l-10{
+        margin-left: 20px;
+    }
+}
+.f-24{
+    font-size: 24px;
+}
+.color-red{
+    color: #ff0000;
+}
+
